added roten flash that remove 1 segment (wip)